Updated project files

--- a/Sigma_Network/Sigma_Network.vcxproj
+++ b/Sigma_Network/Sigma_Network.vcxproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <None Include="..\LICENSE" />
     <None Include="ClassDiagram.cd" />
+    <None Include="Iris.csv" />
     <None Include="Makefile" />
     <None Include="test.ann" />
   </ItemGroup>
