--- a/Sigma_Network/Sigma_Network.vcxproj.filters
+++ b/Sigma_Network/Sigma_Network.vcxproj.filters
@@ -82,5 +82,8 @@
     <None Include="Makefile">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Iris.csv">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
